--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,14 @@
-image: hatsoftwares/vnu:latest
-stages:
-  - deploy
-pages:
+deploy:
   stage: deploy
+  before_script:
+  - apt-get update -yqq
+  - DEBIAN_FRONTEND=noninteractive apt-get install ssh -yqq
   script:
-  - mkdir .public
-  - cp -r * .public
-  - mv .public public
-  artifacts:
-    paths:
-    - public
+    - mkdir "${HOME}/.ssh"
+    - chmod 700 "${HOME}/.ssh"
+    - if [ ! -z ${DEPLOYEMENT_KNOWN_HOSTS+x} ]; then echo -e "${DEPLOYEMENT_KNOWN_HOSTS}" > ${HOME}/.ssh/known_hosts; fi
+    - eval `ssh-agent -s`
+    - if [ ! -z ${DEPLOYEMENT_KEY+x} ]; then ssh-add <(echo "$DEPLOYEMENT_KEY" | base64 --decode); fi
+    - if [ ! -z ${DEPLOYEMENT_KEY+x} ]; then ssh ${DEPLOYEMENT_USER}@${DEPLOYEMENT_HOST} 'cd ../../web/framavectoriel/ && git pull'; fi
   only:
-  - master
+    - master
